webroot/css/style.css
@keyframes slideInFromTop {
    0% {
        transform: translateY(-550%);
        opacity: 0;
    }
    50% {
        opacity: 0.4;
    }
    100% {
        transform: translateY(0);
        opacity: 1;
    }
}

*::selection {
    background-color: #ffc107aa;
    color:rgb(255, 255, 255);
}
::-webkit-scrollbar {
    width: 10px;
}
::-webkit-scrollbar-track {
    background: #212529; 
}
::-webkit-scrollbar-thumb {
    background: #ffc107; 
    border-radius: 50px;
}
::-webkit-scrollbar-thumb:hover {
    background: #b88c06;
}


.slideFromTop {
    animation: 1.3s ease-out 0s 1 slideInFromTop;
    transition: transform .2s;
}

.btn {
    transition: transform .2s;
}

.btn:hover , .grow:hover{
    transform: scale(1.05);
}

.image-nav:hover {
    filter: brightness(70%);
    border-radius: 50%;
}

@media screen and (max-width: 768px) {
    .grow:hover{
        transform: none;
    }

}
/*================LOGIN=====================*/
.box{
    position: relative;
    width: 380px;
    height: 420px;
    border-radius: 8px;
    overflow: hidden;
}
.box::before{
    content:'';
    position: absolute;
    top: -50%;
    left: -50%;
    width: 380px;
    height: 420px;
    background: linear-gradient(0deg,transparent,#ffc107,#ffc107);
    transform-origin: bottom right;
    animation: animate 6s linear infinite;
}
.box::after{
    content:'';
    position: absolute;
    top: -50%;
    left: -50%;
    width: 380px;
    height: 420px;
    background: linear-gradient(0deg,transparent,#ffc107,#ffc107);
    transform-origin: bottom right;
    animation: animate 6s linear infinite;
    animation-delay: -3s;
}
@keyframes animate{
    0%{
        transform: rotate(0deg);
    }
    100%{
        transform: rotate(360deg);
    }
}
.form{
    position: absolute;
    inset: 2px;
    border-radius: 8px;
    z-index: 10;
    padding: 50px 40px;
    display: flex;
    flex-direction: column;
}
.form h2{
    color: #ffffff;
    font-weight: 500;
    text-align: center;
    letter-spacing: 0.1em;
}
.inputBox{
    position: relative;
    width: 300px;
    margin-top: 25px;

}
.inputBox>div>input{
    position: relative;
    width: 100%;
    padding: 20px 10px 10px;
    background: transparent;
    border: none;
    outline: none;
    color: #23242a;
    font-size: 1.5em;
    letter-spacing: 0.05em;
    z-index: 10;

}

.inputBox i{
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 2px;
    background: #ffc107;
    border-radius: 4px;
    transition: 0.5s;
    pointer-events: none;
    z-index: 9;
}
.inputBox>div>input:valid ~ i,
.inputBox>div>input:focus ~ i
{
    height: 44px;
}

/*================UPDATE=====================*/

#update-tab-menu{
    display: grid;
    flex: auto;
    grid-template-columns: 50% 50%;
    align-self: center;
    height: auto;
    min-height: 85vh;
}

.tab{
    display: flex;
    flex-direction: column;
    background-color:#ffc107;
    margin: 1vh 2vw 1vh 2vw;
    border-radius: 40px;
    margin-bottom: 50px;
    box-shadow:25px 25px 40px rgb(80, 80, 80);
    height: auto;
}

.update-tab-contenu{
    display: flex;
    flex-direction: column;
}

@media screen and (max-width: 768px) {
    #update-tab-menu{
        display: block;
    }

}

